Fix ICU code showing up on Cocoa hung renderer dialog's "exit" button.

Bug: 803855
Change-Id: Ibecaea32f973f907583ab8f01db4ae14a6f08cc6